feat: transcribe, email sender
